# Bytech-BY-CM-WF-101-WT

./: .cursorrules  .gitignore  Makefile  README.md  apollo-analysis-summary.md  apollo-binary-analysis-complete.md  apollo-comprehensive-analysis-20260108.md  pyproject.toml  rtsp-discovery-20260107_230024.txt
docs/: assessment-reports.md  default-credentials.md  file-transfer-telnet.md  methodology.md  mitmproxy-in-depth.md  mitmproxy-quick-start.md  network-exposure.md  telnet-file-transfer-method.md
hello-world/: README.md  build.sh  transfer-and-run.sh
hello-world/c/: Makefile  hello.c
hello-world/cpp/: CMakeLists.txt  hello.cpp
hello-world/rust/: Cargo.toml
hello-world/rust/.cargo/: config.toml
hello-world/rust/src/: main.rs
lib/telnet/: README.md  __init__.py  async_client.py  cli.py  client.py  config.py  daemon.py  exceptions.py  logging.py  pool.py  service.py  sync_client.py
lib/telnet/api/: __init__.py  app.py  models.py
lib/telnet/api/routes/: devices.py  health.py
lib/telnet/profiles/: __init__.py  auto_detect.py  base.py  busybox.py  custom.py  linux.py  registry.py
plans/: comprehensive-telnet-automation-framework.md  iot-webcam-penetration-testing-suite-extension.md  mitmproxy-iptables-integration.md  webcam-local-rtsp-server-and-cloud-blocking.md
scripts/: LOCAL-ONLY-SETUP.md  analyze-connections.sh  analyze-webcam-interface.sh  block-cloud-dns.sh  block-cloud-iptables.sh  block-cloud-process.sh  cameradar-rtsp-scan.sh  cleanup-mitm-iptables.sh  connection-alerts.sh  discover-cloud-endpoints.sh  discover-rtsp-streams.sh  download-apollo-chunked.sh  download-apollo-hex.sh  download-apollo-http.sh  download-apollo-simple.sh  download-apollo-split.sh  download-file-telnet.sh  download-iptables-binary.sh  evaluate-webcam.sh  explore-iptables-alternatives.sh  iot-config.yaml  iot-internal-probe.sh  iot-internal-report-generator.sh  iot-mega-enum-prefetch.sh  iot-mega-enum.sh  iot-report-generator.sh  monitor-connections.sh  replace-apollo-rtsp.sh  setup-local-only-mode.sh  setup-local-rtsp.sh  setup-mitm-iptables-local-sh.sh  setup-mitm-iptables-local.sh  setup-mitm-iptables-remote.sh  test-local-setup.sh  test-rtsp-connection.sh  transfer-file-telnet.sh
scripts/data/: cve-database.json
scripts/dockerfiles/armv6-cross-compile/: Dockerfile  cmake-toolchain.cmake
scripts/dockerfiles/hydra/: Dockerfile
scripts/dockerfiles/metasploit/: Dockerfile
scripts/dockerfiles/nikto/: Dockerfile
scripts/dockerfiles/onvif-tools/: Dockerfile
scripts/dockerfiles/upnp-tools/: Dockerfile
scripts/python/: analyze_connections.py  block_cloud_process.py  execute_command.py
scripts/wordlists/: camera-passwords.txt  cameradar-credentials.json  cameradar-routes.txt  common-passwords.txt
test-cameradar/: cameradar_rtsp.json  cameradar_rtsp.txt
tests/: __init__.py  mock_telnet_server.py  test_client.py  test_pool.py  test_profiles.py
tests/integration/: __init__.py  test_real_devices.py
webcam-evaluation-10.0.0.227-20260107_233601/: cloud-endpoints.txt  connection-analysis.txt  evaluation-summary.txt  rtsp-discovery.txt  webcam-interface.txt
webcam-evaluation-10.0.0.227-20260107_233809/: cloud-endpoints.txt  connection-analysis.txt  evaluation-summary.txt  rtsp-discovery.txt  webcam-interface.txt
